--- a/css/mobil.css
+++ b/css/mobil.css
@@ -25,7 +25,7 @@ header{
     display: flex;
     justify-content: space-between;
     color: #FFFFFF;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     height: 60px;
     align-items: center;
 }
@@ -51,6 +51,11 @@ header{
     border: none;
     padding: 5px;
     border-radius: 5px;
+    cursor: pointer;
+}
+
+.nav-toggle:hover{
+    background-color: rgba(0, 0, 0, .2);
 }
 
 .container{
@@ -97,4 +102,52 @@ header{
     margin-top: 20px;
     width: 80%;
     height: 40px;
+    cursor: pointer;
+}
+
+.nav-menu{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
+    background-color: rgba(34, 23, 103,0.9);
+    position: fixed;
+    left: 0;
+    top:60px;
+    width: 100%;
+    padding: 20px 0;
+    height: calc(100% - 60px);
+    overflow-y: auto;
+    left: 100%;
+    transition: left 0.3s;
+}
+
+.nav-menu-item{
+    font-size: 1.8rem;
+    margin: 0 10px;
+    line-height: 70px;
+    text-transform: uppercase;
+    width: max-content;
+}
+
+.nav-menu-link{
+    padding: 8px 12px;
+    border-radius: 3px;
+    color: var(--justwhite);
+    text-decoration: none;
+
+}
+
+.nav-menu-link:hover,
+.nav-menu-link_active{
+    background:none;
+    color: var(--bitcoin-orange);
+}
+
+.nav-menu_visible{
+    left: 0;
+}
+
+.nav-toggle:focus:not(:focus-visible){
+    outline: none;
 }
