--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -18,10 +18,15 @@ header{
         padding: 0;
      }
      .logo {
+         font-size: 1.8rem;
+         span {
+             color: colors.$colorSecundario;
+             margin-left: 5px;
+         }
         @include medias.for-desktop-up {   
             grid-column: 2 / 5;
             grid-row: 3;
-            font-size: 25px;
+            font-size: 2.5rem;
          }
      }
      .cuadro01 {
@@ -83,6 +88,7 @@ header{
         overflow-y: auto;
         left: 100%;
         transition: left 0.3s;
+        z-index: 100;
     }
     .nav-menu-item{
         font-size: 1.8rem;
