--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,3 +2,7 @@
 @use './components/header';
 @use './components/central';
 @use './components/footer';
+@use './components/infopersonal';
+@use './components/skills';
+@use './components/cards';
+@use './components/portafolio';
