--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -174,6 +174,11 @@ header .nav-toggle:focus:not(:focus-visible) {
 .container .presentacion {
   text-align: center;
 }
+@media (min-width: 1200px) {
+  .container .presentacion {
+    text-align: initial;
+  }
+}
 .container .foto {
   background-image: url("../img/foto.png");
   background-position: center;
@@ -308,6 +313,11 @@ header .nav-toggle:focus:not(:focus-visible) {
 .container .menuright__button i {
   color: #FFFFFF;
   width: 50px;
+}
+@media (min-width: 1200px) {
+  .container .container-education {
+    width: 50%;
+  }
 }
 
 footer {
