--- a/assets/scss/components/_colors.scss
+++ b/assets/scss/components/_colors.scss
@@ -1,8 +1,9 @@
 //Declaracion de colores
-$colorPrimario: #221767;
-$colorSecundario: #FFB550;
-$colorTerneario: #FFFFFF;
-$colorCuaternario: #000000;
+$colorPrimario: #01334C;
+$colorSecundario: #FFFFFF;
+$colorTerneario: #0F0F0F;
+
+$colorCuaternario: #282828;
 $colorOpcional: #b3b3b3;
 //color texto
 $colorTextoPrimario: #FFFFFF;
