--- a/assets/scss/components/_global.scss
+++ b/assets/scss/components/_global.scss
@@ -13,6 +13,6 @@ html{
 }
 
 body{
-    background-color: colors.$colorPrimario;
+    //background-color: colors.$colorPrimario;
     font-size: 2.5rem;
 }
