--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,12 +11,11 @@ html {
 }
 
 body {
-  background-color: #221767;
   font-size: 2.5rem;
 }
 
 header {
-  padding: 10px 15px;
+  padding: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -24,80 +23,42 @@ header {
       -ms-flex-pack: justify;
           justify-content: space-between;
   color: #FFFFFF;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   height: 60px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-@media (min-width: 1200px) {
-  header {
-    display: grid;
-    grid-template-columns: repeat(20, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    height: 140px;
-    padding: 0;
-  }
+  background-color: #01334C;
 }
 header .logo {
   font-size: 1.8rem;
 }
 header .logo span {
-  color: #FFB550;
+  color: #FFFFFF;
   margin-left: 5px;
 }
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
   header .logo {
     grid-column: 2/5;
     grid-row: 3;
     font-size: 2.5rem;
   }
 }
-@media (min-width: 1200px) {
-  header .cuadro01 {
-    width: 70px;
-    height: 70px;
-    background-color: rgba(255, 255, 255, 0.1);
-    grid-column: 19/21;
-    grid-row: 1/3;
-  }
-}
-@media (min-width: 1200px) {
-  header .cuadro02 {
-    width: 50px;
-    height: 50px;
-    background-color: rgba(255, 255, 255, 0.1);
-    grid-column: 18/19;
-    grid-row: 3/4;
-  }
-}
-@media (min-width: 1200px) {
-  header .cuadro03 {
-    width: 100%;
-    height: 2px;
-    background-color: rgba(255, 255, 255, 0.1);
-    grid-column: 2/20;
-    grid-row: 4/5;
-  }
-}
 header .nav-toggle {
   width: 40px;
   height: 40px;
   color: #FFFFFF;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(15, 15, 15, 0.2);
   font-size: 20px;
   border: none;
   padding: 5px;
   border-radius: 5px;
   cursor: pointer;
 }
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
   header .nav-toggle {
     display: none;
   }
 }
 header .nav-toggle:hover {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(40, 40, 40, 0.2);
 }
 header .nav-menu {
   display: -webkit-box;
@@ -111,7 +72,7 @@ header .nav-menu {
       -ms-flex-align: center;
           align-items: center;
   list-style: none;
-  background-color: rgba(34, 23, 103, 0.9);
+  background-color: rgba(1, 51, 76, 0.9);
   position: fixed;
   left: 0;
   top: 60px;
@@ -124,11 +85,34 @@ header .nav-menu {
   transition: left 0.3s;
   z-index: 100;
 }
+@media (min-width: 1024px) {
+  header .nav-menu {
+    position: initial;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: none;
+        -ms-flex-align: none;
+            align-items: none;
+    list-style: none;
+    background-color: none;
+    left: none;
+    top: none;
+    width: initial;
+    padding: none;
+    height: none;
+    overflow-y: initial;
+    left: none;
+    -webkit-transition: none;
+    transition: none;
+    z-index: none;
+  }
+}
 header .nav-menu-item {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   margin: 0 10px;
   line-height: 70px;
-  text-transform: uppercase;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -142,7 +126,7 @@ header .nav-menu-link {
 header .nav-menu-link:hover,
 header .nav-menu-link_active {
   background: none;
-  color: #FFB550;
+  color: #FFFFFF;
 }
 header .nav-menu_visible {
   left: 0;
@@ -151,10 +135,7 @@ header .nav-toggle:focus:not(:focus-visible) {
   outline: none;
 }
 
-.container {
-  margin: 0 auto;
-}
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
   .container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -171,114 +152,63 @@ header .nav-toggle:focus:not(:focus-visible) {
     padding: 0 70px;
   }
 }
-.container .presentacion {
-  text-align: center;
+.container .home {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #01334C;
+  height: calc(100vh - 60px);
 }
-@media (min-width: 1200px) {
-  .container .presentacion {
+@media (min-width: 1024px) {
+  .container .home {
     text-align: initial;
   }
 }
-.container .foto {
-  background-image: url("../img/foto.png");
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  border-radius: 50%;
-  border: 2px solid #b3b3b3;
-  width: 180px;
-  height: 180px;
-  margin: 10px auto;
+.container .home__titulo {
+  text-align: center;
 }
-@media (min-width: 1200px) {
-  .container .foto {
-    background-image: url("../img/foto_sin_fondo.png");
-    border-radius: 0;
-    border: none;
-    width: 40%;
-    height: 600px;
-    margin: auto;
-    margin-left: 50px;
+.container .home__titulo h1 {
+  -webkit-text-stroke: 1px #FFF;
+  color: transparent;
+  font-size: 3rem;
+}
+.container .home__titulo h2 {
+  font-size: 2rem;
+  color: #FFF;
+}
+.container .home__titulo .button {
+  color: #FFFFFF;
+  padding: 10px;
+  background-color: #01334C;
+  border: 1px solid #FFFFFF;
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin-top: 20px;
+  width: 60%;
+  height: 40px;
+  cursor: pointer;
+}
+@media (min-width: 1024px) {
+  .container .home__titulo .button {
+    width: 300px;
   }
 }
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
   .container .presentacion {
     margin: auto;
     width: 50%;
   }
 }
-.container h1 {
-  color: #FFB550;
-  font-size: 2.5rem;
-  font-weight: 700;
-  width: 70%;
-  margin: 0 auto;
-  text-align: center;
-}
-@media (min-width: 1200px) {
-  .container h1 {
-    font-size: 2.8rem;
-    margin: 0;
-    text-align: initial;
-    margin-bottom: 15px;
-  }
-}
-.container h2 {
-  color: #FFFFFF;
-  font-size: 2rem;
-  font-weight: 700;
-  width: 80%;
-  margin: 0 auto;
-  text-align: center;
-  margin-top: 10px;
-}
-@media (min-width: 1200px) {
-  .container h2 {
-    font-size: 2.2rem;
-    margin: 0;
-    text-align: initial;
-    margin-bottom: 15px;
-  }
-}
-.container p {
-  color: #FFFFFF;
-  font-weight: 300;
-  font-size: 1.6rem;
-  width: 80%;
-  margin: 0 auto;
-  text-align: center;
-  margin-top: 10px;
-}
-@media (min-width: 1200px) {
-  .container p {
-    font-size: 1.9rem;
-    margin: 0;
-    text-align: initial;
-    line-height: 1.8;
-  }
-}
-.container .button {
-  color: #FFFFFF;
-  padding: 10px;
-  background-color: #221767;
-  border: 1px solid #FFB550;
-  border-radius: 20px;
-  font-weight: 700;
-  font-size: 1.5rem;
-  margin-top: 20px;
-  width: 80%;
-  height: 40px;
-  cursor: pointer;
-}
-@media (min-width: 1200px) {
-  .container .button {
-    width: 300px;
-  }
-}
 .container .menuright {
   display: none;
 }
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
   .container .menuright {
     display: block;
     position: fixed;
@@ -301,65 +231,51 @@ header .nav-toggle:focus:not(:focus-visible) {
   font-size: 3rem;
 }
 .container .menuright__button:hover {
-  background-color: #FFB550;
+  background-color: #FFFFFF;
   -webkit-transform: scale(0.9);
           transform: scale(0.9);
   -webkit-transition-duration: 0.3s;
           transition-duration: 0.3s;
 }
 .container .menuright__button--activo {
-  background-color: #FFB550;
+  background-color: #FFFFFF;
 }
 .container .menuright__button i {
-  color: #FFFFFF;
+  color: #0F0F0F;
   width: 50px;
 }
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
+  .container .container-education {
+    width: 50%;
+  }
+}
+@media (min-width: 1024px) {
   .container .container-education {
     width: 50%;
   }
 }
 
 footer {
-  display: none;
-  grid-template-columns: repeat(20, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  color: #FFFFFF;
-  height: 140px;
+  background-color: #0F0F0F;
+  height: 60px;
+  color: #FFF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 1.2rem;
 }
-@media (min-width: 1200px) {
-  footer {
-    display: grid;
-  }
-}
-footer .cuadrof01 {
-  width: 70px;
-  height: 70px;
-  background-color: rgba(255, 255, 255, 0.1);
-  grid-column: 2/4;
-  grid-row: 3/5;
-}
-footer .cuadrof02 {
-  width: 50px;
-  height: 50px;
-  background-color: rgba(255, 255, 255, 0.1);
-  grid-column: 3/4;
-  grid-row: 2/3;
-}
-footer .cuadrof03 {
-  width: 100%;
-  height: 2px;
-  background-color: rgba(255, 255, 255, 0.1);
-  grid-column: 2/20;
-  grid-row: 1/2;
-}
-
 .personalinfo {
   margin: 0 auto 30px auto;
   text-align: center;
   max-width: 320px;
 }
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
   .personalinfo {
     width: 30%;
     margin: 50px 0;
@@ -368,7 +284,7 @@ footer .cuadrof03 {
 .personalinfo h2 {
   margin: 15px auto;
 }
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
   .personalinfo h2 {
     text-align: center;
     margin: initial;
@@ -394,7 +310,7 @@ footer .cuadrof03 {
   text-align: left;
   border-left-style: solid;
   border-left-width: 2px;
-  border-color: #FFB550;
+  border-color: #FFFFFF;
   padding-left: 15px;
 }
 .personalinfo__detalle p {
@@ -407,15 +323,15 @@ footer .cuadrof03 {
 }
 .personalinfo__detalle h3 {
   font-size: 1.8rem;
-  color: #FFB550;
+  color: #FFFFFF;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
   .container-skills-total {
     width: 70%;
   }
 }
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
   .container-skills-total h2 {
     width: 100%;
     text-align: center;
@@ -437,7 +353,7 @@ footer .cuadrof03 {
   gap: 20px;
   text-align: center;
 }
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
   .container-skills-total .container-skills {
     padding: 0 60px;
   }
@@ -453,7 +369,7 @@ footer .cuadrof03 {
   font-size: 1.5rem;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
   .container-education h2 {
     text-align: center;
   }
@@ -468,7 +384,7 @@ footer .cuadrof03 {
 .container-education .education .linea {
   width: 1px;
   height: 85%;
-  background-color: #FFB550;
+  background-color: #FFFFFF;
   position: absolute;
   top: 15px;
   left: -1px;
@@ -477,14 +393,14 @@ footer .cuadrof03 {
   position: absolute;
   width: 30px;
   height: 30px;
-  background-color: #FFB550;
+  background-color: #FFFFFF;
   border-radius: 50%;
   left: -15px;
   top: 8px;
 }
 .container-education .education span {
   font-size: 1.5rem;
-  color: #FFB550;
+  color: #FFFFFF;
   background-color: rgba(179, 179, 179, 0.2);
   padding: 5px;
   border-radius: 5px;
@@ -519,7 +435,7 @@ footer .cuadrof03 {
   border-radius: 15px;
   position: relative;
 }
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
   .container .portafolio__card {
     width: 300px;
   }
@@ -531,8 +447,8 @@ footer .cuadrof03 {
   background-size: cover;
 }
 .container .portafolio span {
-  background-color: rgba(255, 181, 80, 0.8);
-  color: #221767;
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #01334C;
   font-size: 1.5rem;
   font-weight: bold;
   display: block;
