--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -3,35 +3,16 @@
 @use 'colors' as *;
 
 footer{
-    display: none;
-    grid-template-columns: repeat(20,1fr);
-    grid-template-rows: repeat(4,1fr);
-    color: $colorTerneario;
-    height: 140px;
+    background-color: $colorTerneario;
+    height: 60px;
+    color: #FFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
     @include medias.for-desktop-up {   
-        display: grid;
+        // display: grid;
      }
-    .cuadrof01 {
-        width: 70px;
-        height: 70px;
-        background-color: rgba($colorTerneario, 0.1);
-        grid-column: 2 / 4;
-        grid-row: 3 / 5;
-    }
-    .cuadrof02 {
-        width: 50px;
-        height: 50px;
-        background-color: rgba($colorTerneario, 0.1);
-        grid-column: 3 / 4;
-        grid-row: 2 / 3;
-    }
-    .cuadrof03 {
-        width: 100%;
-        height: 2px;
-        background-color: rgba($colorTerneario, 0.1);
-        grid-column: 2 / 20;
-        grid-row: 1 / 2;
-    }
 }
 
 
