--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -3,19 +3,19 @@
 @use 'medias';
 
 header{
-    padding: 10px 15px;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
     color: colors.$colorTextoPrimario;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     height: 60px;
-    align-items: center;
+    background-color: colors.$colorPrimario;
     @include medias.for-desktop-up {   
-        display: grid;
-        grid-template-columns: repeat(20,1fr);
-        grid-template-rows: repeat(4,1fr);
-        height: 140px;
-        padding: 0;
+        // display: grid;
+        // grid-template-columns: repeat(20,1fr);
+        // grid-template-rows: repeat(4,1fr);
+        // height: 140px;
+        // padding: 0;
      }
      .logo {
          font-size: 1.8rem;
@@ -29,33 +29,7 @@ header{
             font-size: 2.5rem;
          }
      }
-     .cuadro01 {
-        @include medias.for-desktop-up {   
-            width: 70px;
-            height: 70px;
-            background-color: rgba(colors.$colorTextoPrimario, 0.1);
-            grid-column: 19 / 21;
-            grid-row: 1 / 3;
-         }
-     }
-     .cuadro02 {
-        @include medias.for-desktop-up {   
-            width: 50px;
-            height: 50px;
-            background-color: rgba(colors.$colorTextoPrimario, 0.1);
-            grid-column: 18 / 19;
-            grid-row: 3 / 4;
-         }
-     }
-     .cuadro03 {
-        @include medias.for-desktop-up {   
-            width: 100%;
-            height: 2px;
-            background-color: rgba(colors.$colorTextoPrimario, 0.1);
-            grid-column: 2 / 20;
-            grid-row: 4 / 5;
-         }
-     }
+     
     .nav-toggle {
         width: 40px;
         height: 40px;
@@ -89,12 +63,27 @@ header{
         left: 100%;
         transition: left 0.3s;
         z-index: 100;
+        @include medias.for-desktop-up {
+            position:initial; 
+            flex-direction: row;
+            align-items: none;
+            list-style: none;
+            background-color: none;
+            left: none;
+            top: none;
+            width: initial;
+            padding: none;
+            height: none;
+            overflow-y:initial;
+            left: none;
+            transition: none;
+            z-index: none;
+         }
     }
     .nav-menu-item{
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         margin: 0 10px;
         line-height: 70px;
-        text-transform: uppercase;
         width: max-content;
     }
     
