--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -135,23 +135,6 @@ header .nav-toggle:focus:not(:focus-visible) {
   outline: none;
 }
 
-@media (min-width: 1024px) {
-  .container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    padding: auto 200px;
-    max-width: 2000px;
-    margin: 0 auto;
-    text-align: initial;
-    padding: 0 70px;
-  }
-}
 .container .home {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -165,11 +148,6 @@ header .nav-toggle:focus:not(:focus-visible) {
   background-color: #01334C;
   height: calc(100vh - 60px);
 }
-@media (min-width: 1024px) {
-  .container .home {
-    text-align: initial;
-  }
-}
 .container .home__titulo {
   text-align: center;
 }
@@ -178,9 +156,19 @@ header .nav-toggle:focus:not(:focus-visible) {
   color: transparent;
   font-size: 3rem;
 }
+@media (min-width: 1024px) {
+  .container .home__titulo h1 {
+    font-size: 6rem;
+  }
+}
 .container .home__titulo h2 {
   font-size: 2rem;
   color: #FFF;
+}
+@media (min-width: 1024px) {
+  .container .home__titulo h2 {
+    font-size: 5rem;
+  }
 }
 .container .home__titulo .button {
   color: #FFFFFF;
@@ -196,7 +184,8 @@ header .nav-toggle:focus:not(:focus-visible) {
 }
 @media (min-width: 1024px) {
   .container .home__titulo .button {
-    width: 300px;
+    width: 200px;
+    font-size: 2rem;
   }
 }
 @media (min-width: 1024px) {
