--- a/assets/scss/components/_colors.scss
+++ b/assets/scss/components/_colors.scss
@@ -2,8 +2,8 @@
 $colorPrimario: #01334C;
 $colorSecundario: #FFFFFF;
 $colorTerneario: #0F0F0F;
+$colorCuaternario: #F9F9F9;
 
-$colorCuaternario: #282828;
 $colorOpcional: #b3b3b3;
 //color texto
 $colorTextoPrimario: #FFFFFF;
