--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,8 @@
 html {
   font-size: 62.5%;
   font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth;
+  scroll-padding: 90px;
 }
 
 body {
@@ -188,11 +190,162 @@ header .nav-toggle:focus:not(:focus-visible) {
     font-size: 2rem;
   }
 }
-.container .contacto {
-  background-color: #F9F9F9;
-  padding: 20px 0;
+.container .aboutme {
+  width: 90%;
+  padding: 30px 0;
+  text-align: center;
+  max-width: 1250px;
+  margin: 0 auto;
 }
-.container .contacto__form {
+@media (min-width: 1024px) {
+  .container .aboutme {
+    text-align: left;
+  }
+}
+.container .aboutme__principal {
+  margin-top: 15px;
+}
+@media (min-width: 1024px) {
+  .container .aboutme__principal {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 50px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0 50px;
+  }
+}
+@media (min-width: 1024px) {
+  .container .aboutme__foto {
+    width: 50%;
+    text-align: center;
+  }
+}
+.container .aboutme__foto img {
+  width: 100%;
+  max-width: 300px;
+  border: 1px solid #161616;
+}
+@media (min-width: 1024px) {
+  .container .aboutme__foto img {
+    max-width: 400px;
+  }
+}
+@media (min-width: 1024px) {
+  .container .aboutme__presentacion {
+    width: 50%;
+  }
+}
+.container .aboutme__presentacion p {
+  font-size: 1.8rem;
+  text-align: center;
+  font-weight: 300;
+  margin-bottom: 10px;
+}
+@media (min-width: 1024px) {
+  .container .aboutme__presentacion p {
+    text-align: left;
+    font-size: 2rem;
+  }
+}
+.container .portafolio {
+  background-color: #F9F9F9;
+  margin: 0 auto;
+  padding: 30px 0;
+  max-width: 1250px;
+}
+.container .portafolio__central {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 20px;
+  margin: 30px 0;
+}
+.container .portafolio__item {
+  color: #FFF;
+  width: 95%;
+  max-width: 300px;
+  height: 220px;
+  position: relative;
+}
+.container .portafolio__item img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.container .portafolio__item .portafolio_description {
+  position: absolute;
+  width: 100%;
+  top: 100%;
+  -webkit-transform: translate(0, -100%);
+          transform: translate(0, -100%);
+  padding: 8px 15px;
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #0a0a0a;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-size: 1.5rem;
+}
+.container .skills {
+  max-width: 1250px;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+.container .skills__container {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 20px;
+  text-align: center;
+  margin: 0 auto;
+}
+@media (min-width: 1024px) {
+  .container .skills__container {
+    padding: 0 60px;
+  }
+}
+.container .skills__container .skill {
+  width: 100px;
+}
+.container .skills__container .skill img {
+  width: 50px;
+}
+.container .skills__container .skill span {
+  color: #0F0F0F;
+  font-size: 1.5rem;
+}
+.container .contact {
+  background-color: #F9F9F9;
+  padding: 30px 0;
+  max-width: 1250px;
+  margin: 0 auto;
+}
+@media (min-width: 1024px) {
+  .container .contact__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 0 60px;
+  }
+}
+.container .contact__form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -203,7 +356,12 @@ header .nav-toggle:focus:not(:focus-visible) {
   width: 80%;
   margin: 0 auto;
 }
-.container .contacto__form--input {
+@media (min-width: 1024px) {
+  .container .contact__form {
+    width: 50%;
+  }
+}
+.container .contact__form--input {
   border: 0;
   outline: 0px;
   background-color: #F9F9F9;
@@ -211,7 +369,7 @@ header .nav-toggle:focus:not(:focus-visible) {
   border: 2px solid #C4C4C4;
   margin-bottom: 5px;
 }
-.container .contacto__form--button {
+.container .contact__form--button {
   border: 0;
   outline: 0px;
   background-color: #0F0F0F;
@@ -220,59 +378,93 @@ header .nav-toggle:focus:not(:focus-visible) {
   color: #FFFFFF;
 }
 @media (min-width: 1024px) {
-  .container .presentacion {
-    margin: auto;
+  .container .contact__form {
     width: 50%;
   }
 }
-.container .menuright {
-  display: none;
-}
 @media (min-width: 1024px) {
-  .container .menuright {
-    display: block;
-    position: fixed;
-    left: 100%;
-    top: 50%;
-    -webkit-transform: translate(-150%, -50%);
-            transform: translate(-150%, -50%);
-    overflow: hidden;
+  .container .contact .contact__social {
+    width: 50%;
   }
 }
-.container .menuright__button {
-  width: 50px;
-  height: 50px;
-  background-color: #b3b3b3;
-  border-radius: 15px;
-  text-align: center;
-  cursor: pointer;
-  list-style: none;
-  margin-top: 15px;
+.container .contact .contact__social .email-fono {
+  background-color: #161616;
+  width: 80%;
+  margin: 0px auto 10px auto;
+  padding: 5px 15px;
+  color: #FFF;
+}
+.container .contact .contact__social .email-fono p {
+  margin: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 1.5rem;
+}
+.container .contact .contact__social .email-fono i {
+  font-size: 2.5rem;
+  margin-right: 20px;
+}
+.container .contact .contact__social .redes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #161616;
+  width: 80%;
+  margin: 0 auto;
+  color: #FFF;
   font-size: 3rem;
-}
-.container .menuright__button:hover {
-  background-color: #FFFFFF;
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
-  -webkit-transition-duration: 0.3s;
-          transition-duration: 0.3s;
-}
-.container .menuright__button--activo {
-  background-color: #FFFFFF;
-}
-.container .menuright__button i {
-  color: #0F0F0F;
-  width: 50px;
+  padding: 10px 15px;
 }
 @media (min-width: 1024px) {
-  .container .container-education {
-    width: 50%;
+  .container .contact .contact__social .redes {
+    font-size: 4rem;
+    height: 160px;
   }
 }
+
+.button--negro {
+  border: 0;
+  color: #FFFFFF;
+  padding: 10px;
+  background-color: #0F0F0F;
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin-top: 20px;
+  width: 50%;
+  height: 40px;
+  cursor: pointer;
+}
+
+.titulo_bloque {
+  background-color: #F2F2F2;
+  color: #5A5A5A;
+  width: 130px;
+  padding: 10px 0;
+  font-size: 1.8rem;
+  text-align: center;
+  margin-bottom: 20px;
+}
 @media (min-width: 1024px) {
-  .container .container-education {
-    width: 50%;
+  .titulo_bloque {
+    margin-left: 10px;
   }
+}
+
+.menu_flotante {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 100;
 }
 
 footer {
@@ -347,49 +539,6 @@ footer {
 }
 
 @media (min-width: 1024px) {
-  .container-skills-total {
-    width: 70%;
-  }
-}
-@media (min-width: 1024px) {
-  .container-skills-total h2 {
-    width: 100%;
-    text-align: center;
-    margin: initial;
-    margin: 50px 0;
-  }
-}
-.container-skills-total .container-skills {
-  width: 90%;
-  margin: 30px auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  gap: 20px;
-  text-align: center;
-}
-@media (min-width: 1024px) {
-  .container-skills-total .container-skills {
-    padding: 0 60px;
-  }
-}
-.container-skills-total .container-skills .skill {
-  width: 100px;
-}
-.container-skills-total .container-skills .skill img {
-  width: 50px;
-}
-.container-skills-total .container-skills .skill span {
-  color: #FFFFFF;
-  font-size: 1.5rem;
-}
-
-@media (min-width: 1024px) {
   .container-education h2 {
     text-align: center;
   }
@@ -433,54 +582,5 @@ footer {
   margin: initial;
   text-align: initial;
   color: #b3b3b3;
-}
-
-.container .portafolio {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  gap: 15px;
-  margin: 30px 0;
-}
-.container .portafolio__card {
-  width: 80%;
-  max-width: 300px;
-  height: 200px;
-  background-color: #838383;
-  border-radius: 15px;
-  position: relative;
-}
-@media (min-width: 1024px) {
-  .container .portafolio__card {
-    width: 300px;
-  }
-}
-.container .portafolio .card-01 {
-  background-image: url("../img/gesrem.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.container .portafolio span {
-  background-color: rgba(255, 255, 255, 0.8);
-  color: #01334C;
-  font-size: 1.5rem;
-  font-weight: bold;
-  display: block;
-  text-align: center;
-  width: 90%;
-  position: absolute;
-  left: 50%;
-  bottom: 20px;
-  -webkit-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
-  border-radius: 15px;
-  padding: 5px;
-  cursor: pointer;
 }
 /*# sourceMappingURL=styles.css.map */
