--- a/assets/scss/components/_central.scss
+++ b/assets/scss/components/_central.scss
@@ -45,14 +45,138 @@
             }
          }
      }
-     .contacto {
+     .aboutme {
+         width: 90%;
+         padding: 30px 0;
+         text-align: center;
+         max-width: 1250px;
+         margin: 0 auto;
+         @include medias.for-desktop-up {   
+            text-align: left;
+        }
+         &__principal {
+            margin-top: 15px;
+            @include medias.for-desktop-up {   
+                display: flex;
+                gap: 50px;
+                align-items: center;
+                padding: 0 50px;
+            }
+         }
+         &__foto {
+            @include medias.for-desktop-up {   
+                width: 50%;
+                text-align: center;
+            }
+            img {
+             width: 100%;
+             max-width: 300px;
+             border: 1px solid #161616;
+             @include medias.for-desktop-up {   
+                max-width: 400px;
+            }
+            }
+         }
+         &__presentacion {
+            @include medias.for-desktop-up {   
+                width: 50%;
+            }
+            p {
+                font-size: 1.8rem;
+                text-align: center;
+                font-weight: 300;
+                margin-bottom: 10px;
+                @include medias.for-desktop-up {   
+                    text-align: left;
+                    font-size: 2rem;
+                }
+            }
+        }
+         
+     }
+     .portafolio {
         background-color: $colorCuaternario;
-        padding: 20px 0;
+        margin: 0 auto;
+        padding: 30px 0;
+        max-width: 1250px;
+        &__central {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin: 30px 0;
+        }
+        &__item {
+            color: #FFF;
+            width: 95%;
+            max-width: 300px;
+            height: 220px;
+            position: relative;
+            img {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+            }
+            .portafolio_description {
+                position: absolute;
+                width: 100%;
+                top: 100%;
+                transform: translate(0,-100%);
+                padding: 8px 15px;
+                background-color: rgba($colorSecundario,0.8);
+                color: #0a0a0a;
+                display: flex;
+                justify-content: space-between;
+                font-size: 1.5rem;
+            }
+        }
+     }
+     .skills {
+        max-width: 1250px;
+        margin: 0 auto;
+        padding: 30px 0;
+         &__container {
+            width: 90%;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            text-align: center;
+            margin: 0 auto;
+            @include medias.for-desktop-up {   
+                padding: 0 60px;
+            }
+            .skill {
+                width: 100px;
+                img {
+                    width: 50px;
+                }
+                span {
+                    color: $colorTerneario;
+                    font-size: 1.5rem;
+                }
+            }
+    }
+     }
+     .contact {
+        background-color: $colorCuaternario;
+        padding: 30px 0;
+        max-width: 1250px;
+        margin: 0 auto;
+        &__container {
+            @include medias.for-desktop-up {   
+                display: flex;
+                padding: 0 60px;
+            }
+        }
         &__form {
             display: flex;
             flex-direction: column;
             width: 80%;
             margin: 0 auto;
+            @include medias.for-desktop-up {   
+                width: 50%;
+            }
             &--input {
                 border: 0;
                 outline:0px;
@@ -69,120 +193,80 @@
                 margin-bottom: 5px;
                 color: $colorSecundario;
             }
+            @include medias.for-desktop-up {   
+                width: 50%;
+            }
         }
-     }
-    
-    .presentacion {
-        @include medias.for-desktop-up {   
-            margin: auto;
-            width: 50%;
-         }
-    }
-    // h1 {
-    //     color: $colorSecundario;
-    //     font-size: 2.5rem;
-    //     font-weight: 700;
-    //     width: 70%;
-    //     margin: 0 auto;
-    //     text-align: center;
-    //     @include medias.for-desktop-up {   
-    //        font-size: 2.8rem;
-    //        margin: 0;
-    //        text-align: initial;
-    //        margin-bottom: 15px;
-    //      }
-    // // }
-    // h2{
-    //     color: $colorTextoPrimario;
-    //     font-size: 2rem;
-    //     font-weight: 700;
-    //     width: 80%;
-    //     margin: 0 auto;
-    //     text-align: center;
-    //     margin-top: 10px;
-    //     @include medias.for-desktop-up {   
-    //         font-size: 2.2rem;
-    //         margin: 0;
-    //         text-align: initial;
-    //         margin-bottom: 15px;
-    //       }
-    // }
-    // p{
-    //     color: $colorTextoPrimario;
-    //     font-weight: 300;
-    //     font-size: 1.6rem;
-    //     width: 80%;
-    //     margin: 0 auto;
-    //     text-align: center;
-    //     margin-top: 10px;
-    //     @include medias.for-desktop-up {   
-    //         font-size: 1.9rem;
-    //         margin: 0;
-    //         text-align: initial;
-    //         line-height: 1.8;
-    //       }
-    // }
-    // .button{
-    //     color: $colorTextoPrimario;
-    //     padding: 10px;
-    //     background-color: $colorPrimario;
-    //     border: 1px solid $colorSecundario;
-    //     border-radius: 20px;
-    //     font-weight: 700;
-    //     font-size: 1.5rem;
-    //     margin-top: 20px;
-    //     width: 80%;
-    //     height: 40px;
-    //     cursor: pointer;
-    //     @include medias.for-desktop-up {   
-    //         width: 300px;
-    //       }
-    // }
-    .menuright {
-        display: none;
-        @include medias.for-desktop-up {   
-            display: block;
-            position: fixed;
-            left: 100%;
-            top: 50%;
-            transform: translate(-150%,-50%);
-            overflow:hidden;
-          }
-    }
-    .menuright__button {
-        width: 50px;
-        height: 50px;
-        background-color: $colorOpcional;
-        border-radius: 15px;
-        text-align: center;
-        cursor: pointer;
-        list-style: none;
-        margin-top: 15px;
-        font-size: 3rem;
-    }
-    .menuright__button:hover {
-        background-color: $colorSecundario;
-        transform: scale(.9);
-        transition-duration: .3s;
-     }
-     
-     .menuright__button--activo {
-         background-color: $colorSecundario;
-     }
-     
-     .menuright__button i {
-         color: $colorTerneario;
-         width: 50px;
-     }
-     .container-education {
-        @include medias.for-desktop-up {   
-            width: 50%;
-          }
-     }
-     .container-education {
-        @include medias.for-desktop-up {   
-            width: 50%;
-          }
+        .contact__social {
+            @include medias.for-desktop-up {   
+                width: 50%;
+            }
+            .email-fono {
+                background-color: #161616;
+                width: 80%;
+                margin: 0px auto 10px auto;
+                padding: 5px 15px;
+                color: #FFF;
+                p {
+                    margin: 10px;
+                    display: flex;
+                    align-items: center;
+                    font-size: 1.5rem;
+                }
+                i {
+                    font-size: 2.5rem;
+                    margin-right: 20px;
+                }
+            }
+            .redes {
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                background-color: #161616;
+                width: 80%;
+                margin: 0 auto;
+                color: #FFF;
+                font-size: 3rem;
+                padding: 10px 15px;
+                // height: 160px;
+                @include medias.for-desktop-up {   
+                    font-size: 4rem;
+                    height: 160px;
+                }
+            }
+        }
      }
 }
 
+.button--negro {
+    border: 0;
+    color: $colorTextoPrimario;
+    padding: 10px;
+    background-color: $colorTerneario;
+    font-weight: 700;
+    font-size: 1.5rem;
+    margin-top: 20px;
+    width: 50%;
+    height: 40px;
+    cursor: pointer;
+}
+
+.titulo_bloque {
+    background-color: #F2F2F2;
+    color: #5A5A5A;
+    width: 130px;
+    padding: 10px 0;
+    font-size: 1.8rem;
+    text-align: center;
+    margin-bottom: 20px;
+    @include medias.for-desktop-up {   
+        margin-left: 10px;
+    }
+}
+
+.menu_flotante {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 100;
+}
