--- a/assets/scss/components/_global.scss
+++ b/assets/scss/components/_global.scss
@@ -10,6 +10,8 @@
 html{
     font-size: 62.5%;
     font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
+    scroll-padding: 90px;
 }
 
 body{
